Fix minor layout issues

--- a/styles.css
+++ b/styles.css
@@ -29,35 +29,29 @@ header::before {
     position: absolute;
     right: 0;
     top: 0;
-    z-index: -1;
+    z-index: -2;
 }
 
 header {
     background-color: rgb(var(--filter-club-secondary-color) / .15);
-    padding-bottom: calc(2.5rem * var(--line-height-base));
-}
-
-header > * {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 75ch;
-    padding: 0 calc(var(--line-height-base) * 1rem);
+    padding-bottom: calc(2rem * var(--line-height-base));
 }
 
 header > img {
-    max-width: 12.5rem;
+    display: block;
+    margin: 0 auto 0 max(calc(var(--line-height-base) * 1rem), calc((100% - 75ch) / 2));
+    width: 12.5rem;
     padding-top: 7.5rem;
-    padding-right: calc(75ch - 12.5rem);
 }
 
-header p {
+header > p {
     font-size: 1.25rem;
     font-weight: 400;
     hyphens: none;
     line-height: calc(1.25 * var(--line-height-base));
-    margin-top: calc(1.5rem * var(--line-height-base));
+    margin: calc(1.5rem * var(--line-height-base)) auto;
     max-width: 45ch;
+    padding: 0 calc(var(--line-height-base) * 1rem);
     text-align: left;
     transform: rotate(-.75deg);
 }
@@ -75,7 +69,7 @@ h1 {
 h2 {
     color: rgb(var(--filter-club-primary-color));
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: calc(1rem * var(--line-height-base));
     margin-top: calc(3rem * var(--line-height-base));
 }
@@ -88,7 +82,7 @@ li {
     margin-top: calc(var(--line-height-base) * .5rem);
 }
 
-p {
+p, li {
     text-align: justify;
 }
 
@@ -101,6 +95,7 @@ ul {
 }
 
 li {
+    list-style-type: circle;
     flex: 1 1 23ch;
 }
 
